# gogh

./: .gitignore  .lib.rs.swp  .main.rs.swp  Gogh-Presentation-Deck.key  LICENSE  README.md  package-lock.json
art/: .Cargo.toml.swp  Cargo.toml
art/src/: .gen.rs.swp  circled.rs  gen.rs  lib.rs  main.rs  svg.rs
frontend/: config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/abis/: IGoghArt.json  pseudo-contract.json
frontend/public/: gogh_art_bind.wasm
frontend/src/: App.jsx  IGoghArt.json  MainPage.jsx  Showcase.jsx  abi.json  index.css
frontend/src/components/: AddButton.jsx  ColourButton.jsx  ColourPicker.jsx  ColourSelector.jsx  ConnectButton.jsx  GenerateButton.jsx  GeneratedImage.jsx  Header.jsx  MintButton.jsx  NFTModal.jsx  NFTShow.jsx  SetParameters.jsx  ShapeSelector.jsx  Web3ModalProvider.jsx
frontend/src/scripts/: gogh_art.wasm
ipfs/: main.cjs  package-lock.json  package.json
nft/: Cargo.toml
nft/src/: erc721.rs  lib.rs  main.rs  svg.rs
rust_art/: Cargo.toml
rust_art/examples/: counter.rs
rust_art/src/: lib.rs
